# django-store

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app_store/: pytest.ini
app_store/app_order/: admin.py  forms.py  models.py  services.py  urls.py  views.py
app_store/app_order/migrations/: 0001_initial.py  0002_remove_order_products_order.py  0003_alter_order_delivery_method_and_more.py  0004_productorder_price.py  0005_alter_order_status.py  0006_order_is_delete.py
app_store/app_payment/: task.py  urls.py  views.py
app_store/app_shop/: admin.py  cart.py  filters.py  forms.py  models.py  urls.py  views.py
app_store/app_shop/fixtures/: fixtures_categories.json  fixtures_files_products.json  fixtures_products.json  fixtures_tags.json
app_store/app_shop/migrations/: 0001_initial.py  0002_alter_category_file_icon.py  0003_product_category_alter_product_tags.py  0004_alter_product_category.py  0005_category_level_category_lft_category_rght_and_more.py  0006_category_parent.py  0007_category_is_delete_product_is_delete.py
app_store/app_shop/templatetags/: user_tags.py
app_store/app_users/: admin.py  forms.py  models.py  urls.py  views.py
app_store/app_users/fixtures/: fixtures_profile.json  fixtures_user.json
app_store/app_users/migrations/: 0001_initial.py  0002_remove_profile_balance_and_more.py
app_store/store/: celery.py  settings.py  urls.py
app_store/tests/: conftest.py
app_store/utils/: abstract_models.py  context_processors.py  managers.py  mixins.py  signals.py  validators_forms.py
(+43 files in other folders)
