[tool.poetry]
name = "shop"
version = "0.1.0"
description = "my project shop"
authors = ["Vadim Minaev <minaev.vad@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"
typing-extensions = "4.9.0"
pillow = "^10.2.0"
django-debug-toolbar = "^4.3.0"
django-filter = "^23.5"
celery = "^5.3.6"
redis = "^5.0.2"
django-mptt = "^0.16.0"
pytest-django = "^4.8.0"
pytest-factoryboy = "^2.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
